UPDATE Tools/Git & Linux; CREATE Tools/Shell & Tools/AliyunServer